refactor: improve contact deletion efficiency